glFusion ChangeLog

v1.5.0
------
- Update 3rd party libraries to latest releases:
   - geshi Library
   - getID3
   - htmLawed
   - http class
   - oauth class
- Static Pages - fixed autotags so they do not override the page title
- Implemented HTML filter debug option
- Fixed user submitted story form to show allowed items at the bottom
  of the form
- Updated CKEditor v4.4.3
- Bumped MySQL requirement to 5.0.1 as the minimum
- Bumped PHP requirement to v5.3 as the minimum
- New 'default' theme - based on Nouveau but uses jQuery as JS engine
- Revamped how scripts are loaded...
- Implemented new jQuery widgets
- Fixed error in youtube autotag where it would log parse errors
- Migrate all Mootools functionality into the Nouveau theme
- Reworked how embedded story images are handled
- Cleaned up allowed html / allowed auto tag display on story and
  comment entry
- Comment edit now takes you directly to the comment entry area
- HTML filter now allows you to specific both element and attributes
- Privacy policy and Terms of use now implemented as static pages
- Support for PHP v5.3+ unlimited post size

v1.4.3
------
- Static Pages - Do not override the page title when static page content
  is provided via auto tag
- Media Gallery - implemented a fix where data was being written to an
  un-initialized object causing an error on PHP v5.4+ systems.
- Implemented file locking when creating the style cache file to ensure
  multiple instances do not cause a file write error


v1.4.2
------
- Ensure CKEditor's Media Gallery browser window has scrollbars and is
  resizable
- Improved GD2 image resizing to preserve transparency
- Fixed issue where Media Gallery would timeout on album admin screens
- Fixed error in youtube autotag where it would log parse errors
- Reworked how embedded story images are handled
- Comment edit now takes you directly to the comment entry area
- Support for PHP v5.3+ unlimited post size
- Media Gallery - fixed bug in batch album delete